objects/advpm__Summary_Budget__c.object
<CustomObject>
    <fields>
        <fullName>advpm__Amount__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>advpm__Budget__c</fullName>
        <label>Budget</label>
        <referenceTo>advpm__Budget__c</referenceTo>
        <relationshipLabel>Summary Budgets</relationshipLabel>
        <relationshipName>Summary_Budgets</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>advpm__Hours__c</fullName>
        <label>Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>advpm__Is_Expense__c</fullName>
        <formula>IF ( MID( TEXT( advpm__UTBMS_Code__c ) , 1, 1) == &quot;E&quot; , &quot;Yes&quot; , &quot;No&quot; )</formula>
        <label>Is Expense?</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>advpm__Matter_Budget_Lock__c</fullName>
        <formula>advpm__Budget__r.advpm__Matter_Budget_Lock__c</formula>
        <label>Matter Budget Lock</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>advpm__Matter_Legal_Hold__c</fullName>
        <formula>IF ( advpm__Budget__r.advpm__Matter__r.advpm__Legal_Hold__c , &quot;Yes&quot;, &quot;No&quot; )</formula>
        <label>Matter Legal Hold</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>advpm__Timekeeper__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Timekeeper</label>
        <referenceTo>advpm__Timekeeper__c</referenceTo>
        <relationshipLabel>Summary Budgets</relationshipLabel>
        <relationshipName>Summary_Budgets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>advpm__Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Fee</fullName>
                </value>
                <value>
                    <fullName>Expense</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>advpm__UTBMS_Code__c</fullName>
        <label>UTBMS Code</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>B100 Administration</fullName>
                </value>
                <value>
                    <fullName>B110 Case Administration</fullName>
                </value>
                <value>
                    <fullName>B120 Asset Analysis and Recovery</fullName>
                </value>
                <value>
                    <fullName>B130 Asset Disposition</fullName>
                </value>
                <value>
                    <fullName>B160 Fee/Employment Applications</fullName>
                </value>
                <value>
                    <fullName>B170 Fee/Employment Objections</fullName>
                </value>
                <value>
                    <fullName>B180 Avoidance Action Analysis</fullName>
                </value>
                <value>
                    <fullName>B190 Other Contested Matters</fullName>
                </value>
                <value>
                    <fullName>B195 Non-Working Travel</fullName>
                </value>
                <value>
                    <fullName>B200 Operations</fullName>
                </value>
                <value>
                    <fullName>B210 Business Operations</fullName>
                </value>
                <value>
                    <fullName>B220 Employee Benefits/Pensions</fullName>
                </value>
                <value>
                    <fullName>B230 Financing/Cash Collections</fullName>
                </value>
                <value>
                    <fullName>B240 Tax Issues</fullName>
                </value>
                <value>
                    <fullName>B250 Real Estate</fullName>
                </value>
                <value>
                    <fullName>B260 Board of Directors Matters</fullName>
                </value>
                <value>
                    <fullName>B300 Claims and Plan</fullName>
                </value>
                <value>
                    <fullName>B400 Bankruptcy-Related Advice</fullName>
                </value>
                <value>
                    <fullName>B420 Restructurings</fullName>
                </value>
                <value>
                    <fullName>C100 Fact Gathering</fullName>
                </value>
                <value>
                    <fullName>C200 Researching Law</fullName>
                </value>
                <value>
                    <fullName>C300 Analysis and Advice</fullName>
                </value>
                <value>
                    <fullName>C400 Third Party Communication</fullName>
                </value>
                <value>
                    <fullName>E101 Copying</fullName>
                </value>
                <value>
                    <fullName>E102 Outside printing</fullName>
                </value>
                <value>
                    <fullName>E103 Word processing</fullName>
                </value>
                <value>
                    <fullName>E104 Facsimile</fullName>
                </value>
                <value>
                    <fullName>E105 Telephone</fullName>
                </value>
                <value>
                    <fullName>E106 Online research</fullName>
                </value>
                <value>
                    <fullName>E107 Delivery services/messengers</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Summary Budget</label>
    <nameField>
        <displayFormat>SB-{0000000}</displayFormat>
        <label>Summary Budget ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Summary Budgets</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>